修复链接信息错乱问题, 添加默认DB配置: orm.db.default = mongodb ,若不指定则默认为MySQL

--- a/conf/application.ini
+++ b/conf/application.ini
@@ -31,6 +31,9 @@ orm.eloquent.mongodb.driver             =  'mongodb'
 orm.eloquent.mongodb.host               =  'localhost'
 orm.eloquent.mongodb.port               =  '27017'
 orm.eloquent.mongodb.database           =  'blog'
-orm.eloquent.mongodb.username           =  ''
-orm.eloquent.mongodb.password           =  ''
+orm.eloquent.mongodb.username           =  'mongodbAdmin'
+orm.eloquent.mongodb.password           =  'admin888'
 orm.eloquent.mongodb.options.database   =  'admin'
+
+;default db
+orm.db.default                          =   'mongodb'
